--- a/_includes/_head.html
+++ b/_includes/_head.html
@@ -22,6 +22,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <!-- For all browsers -->
+<link rel="stylesheet" href="{{ site.url }}/assets/css/academicons.css">
 <link rel="stylesheet" href="{{ site.url }}/assets/css/main.css">
 
 <meta http-equiv="cleartype" content="on">
